--- a/ChargingStation/ChargingStation.lib/ChargingStation.lib.csproj
+++ b/ChargingStation/ChargingStation.lib/ChargingStation.lib.csproj
@@ -11,4 +11,11 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
